Updated author and location comments

--- a/ThreadDumpAnalyzer/ThreadDumpAnalyzer.html
+++ b/ThreadDumpAnalyzer/ThreadDumpAnalyzer.html
@@ -1,4 +1,6 @@
 <html>
+<!-- Author: Tomasz Mozolewski @2014 -->
+<!-- https://github.com/mozotom/web/tree/master/ThreadDumpAnalyzer -->
 <head>
   <script type="text/javascript" src="ThreadDumpAnalyzer.js"></script>
   <link rel="stylesheet" type="text/css" href="ThreadDumpAnalyzer.css" />
