Added progress indicator

--- a/ThreadDumpAnalyzer/ThreadDumpAnalyzer.html
+++ b/ThreadDumpAnalyzer/ThreadDumpAnalyzer.html
@@ -29,7 +29,7 @@
         <input type="radio" name="autoExpand" onclick="window.autoExpand=true; refreshResult()" checked="checked">Yes</input>
         <input type="radio" name="autoExpand" onclick="window.autoExpand=false; refreshResult()">No</input>
       </td>
-      <td id="analyzeButton"><input type="submit" value="Analyze" /></td>
+      <td id="analyzeButton"><input id="analyzeButton" type="submit" value="Analyze" /></td>
     </tr>
   </table>
   </form>
